--- a/app/src/main/res/layout/activity_main_toolbar.xml
+++ b/app/src/main/res/layout/activity_main_toolbar.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textViewShowCategory"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingRight="8dp"
@@ -21,7 +21,7 @@
             android:textStyle="bold" />
 
         <Spinner
-            android:id="@+id/spinner2"
+            android:id="@+id/spinnerShowCategory"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
     </LinearLayout>
