--- a/app/src/main/res/layout/my_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/my_spinner_dropdown_item.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageViewSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_format_list_bulleted" />
+
+    <TextView
+        android:id="@+id/textViewCategorySpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageViewSpinner"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/imageViewSpinner"
+        android:layout_toRightOf="@+id/imageViewSpinner"
+        android:text="Job"
+        android:textSize="20sp" />
+
+</RelativeLayout>
