--- a/app/src/main/res/layout/my_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/my_spinner_dropdown_item.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="40dp"
+    android:background="@color/colorPrimary"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
 
     <ImageView
         android:id="@+id/imageViewSpinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:srcCompat="@drawable/ic_format_list_bulleted" />
 
     <TextView
         android:id="@+id/textViewCategorySpinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageViewSpinner"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imageViewSpinner"
-        android:layout_toRightOf="@+id/imageViewSpinner"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
+        android:gravity="center"
         android:text="Job"
-        android:textSize="20sp" />
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-</RelativeLayout>
+</LinearLayout>
