--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -31,6 +31,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
                 android:scaleType="fitCenter"
                 android:visibility="visible"
                 app:srcCompat="@drawable/no_tasks_to_complete2" />
